fix z-index header

--- a/src/styles/bootstrap/utilities/_position.scss
+++ b/src/styles/bootstrap/utilities/_position.scss
@@ -16,7 +16,7 @@ $positions: static, relative, absolute, fixed, sticky;
   top: 0;
   right: 0;
   left: 0;
-  z-index: 300;
+  z-index: 1000;
 }
 
 .fixed-bottom {
